--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -88,13 +88,14 @@
     <Compile Include="EmailTemplate.cs" />
     <Compile Include="Enums\ActivityType.cs" />
     <Compile Include="Enums\AuctionStatus.cs" />
-    <Compile Include="Enums\GccCountry.cs" />
     <Compile Include="Enums\Gender.cs" />
     <Compile Include="Enums\OrderStatus.cs" />
     <Compile Include="Enums\PaymentMethod.cs" />
     <Compile Include="Enums\EmailTemplateType.cs" />
     <Compile Include="Enums\OrderType.cs" />
     <Compile Include="Enums\PaymentStatus.cs" />
+    <Compile Include="Enums\PrizeStatus.cs" />
+    <Compile Include="Enums\PrizeType.cs" />
     <Compile Include="Enums\SubscriptionStatus.cs" />
     <Compile Include="Enums\UserProfileStatus.cs" />
     <Compile Include="Enums\TrophyKey.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="Payment\KnetResponse.cs" />
     <Compile Include="Payment\KnetTransaction.cs" />
     <Compile Include="Payment\PaymentTransaction.cs" />
+    <Compile Include="Prize.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductImage.cs" />
     <Compile Include="ProductSpecification.cs" />
