--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -25,6 +25,7 @@
     <add key="RequiredIcon" value="fa-asterisk" />
     <add key="SiteName" value="Zeedli" />
     <add key="LocalShipping" value="1" />
+    <add key="CanonicalUrl" value="http://localhost:15189/" />
   </appSettings>
   <system.web>
     <anonymousIdentification enabled="true" />
