--- a/src/Mzayad.Core/Mzayad.Core.csproj
+++ b/src/Mzayad.Core/Mzayad.Core.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Exceptions\InsufficientTokensException.cs" />
     <Compile Include="Exceptions\SubscriptionCannotBePurchasesWithTokensException.cs" />
     <Compile Include="Exceptions\SubscriptionInvalidForPurchaseException.cs" />
+    <Compile Include="Exceptions\UserNotHaveAvatarPrize.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\UriExtensions.cs" />
     <Compile Include="Formatting\CurrencyFormatter.cs" />
