--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -88,6 +88,7 @@
     <Compile Include="EmailTemplate.cs" />
     <Compile Include="Enums\ActivityType.cs" />
     <Compile Include="Enums\AuctionStatus.cs" />
+    <Compile Include="Enums\FriendRequestStatus.cs" />
     <Compile Include="Enums\Gender.cs" />
     <Compile Include="Enums\OrderStatus.cs" />
     <Compile Include="Enums\PaymentMethod.cs" />
@@ -97,6 +98,8 @@
     <Compile Include="Enums\SubscriptionStatus.cs" />
     <Compile Include="Enums\UserProfileStatus.cs" />
     <Compile Include="Enums\TrophyKey.cs" />
+    <Compile Include="FriendRequest.cs" />
+    <Compile Include="UserFriend.cs" />
     <Compile Include="IslamicCalendar.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="Order.cs" />
