--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -121,6 +121,7 @@
     <Compile Include="BidService.cs" />
     <Compile Include="CategoryService.cs" />
     <Compile Include="EmailTemplateService.cs" />
+    <Compile Include="FriendService.cs" />
     <Compile Include="Identity\RoleManager.cs" />
     <Compile Include="Identity\UserService.cs" />
     <Compile Include="IslamicCalendarService.cs" />
