--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -489,7 +489,7 @@
     <Compile Include="Models\User\NotificationModelView.cs" />
     <Compile Include="Models\User\TrophieViewModel.cs" />
     <Compile Include="Models\User\UserProfileViewModel.cs" />
-	<Compile Include="Models\User\FriendRequestsViewModel.cs" />
+    <Compile Include="Models\User\FriendRequestsViewModel.cs" />
     <Compile Include="Models\WishList\AddViewModel.cs" />
     <Compile Include="Models\WishList\IndexViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -814,7 +814,7 @@
     <Content Include="Views\Prize\SelectAvatarPrize.cshtml" />
     <Content Include="Views\Shared\_UserPrizeNotification.cshtml" />
     <Content Include="Views\User\MyAvatars.cshtml" />
-	 <Content Include="Views\User\UserProfile.cshtml" />
+    <Content Include="Views\User\UserProfile.cshtml" />
     <Content Include="Views\User\Friends.cshtml" />
     <TypeScriptCompile Include="Scripts\auctions.ts" />
     <TypeScriptCompile Include="Scripts\site.ts" />
@@ -832,6 +832,7 @@
     <Content Include="Views\Auctions\Closed.cshtml" />
     <Content Include="Views\AutoBid\Edit.cshtml" />
     <Content Include="Views\Friends\Requests.cshtml" />
+    <Content Include="Views\Friends\SendMessage.cshtml" />
     <None Include="Views\Home\SignalR.cshtml" />
     <Content Include="404.html" />
     <Content Include="500.html" />
