--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -69,7 +69,7 @@
       <httpProtocol>
         <customHeaders>
           <add name="Access-Control-Allow-Origin" value="*" />
-          <add name="Access-Control-Allow-Headers" value="Content-Type, X-ApiKey" />
+          <add name="Access-Control-Allow-Headers" value="Content-Type, X-ApiKey, Authorization" />
           <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
         </customHeaders>
       </httpProtocol>
